// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-shopify:html > builds out .liquid files for development 1`] = `
"{% comment %}
  IMPORTANT: This snippet is automatically generated by vite-plugin-shopify.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = vite-tag | replace: '~/', '../' | replace: '@/', '../' | replace: '@@/', '../../resources/js/' %}
{% liquid
  assign path_prefix = path | slice: 0
  if path_prefix == '/'
    assign file_url_prefix = 'http://localhost:5173'
  else
    assign file_url_prefix = 'http://localhost:5173/test/__fixtures__/frontend/entrypoints/'
  endif
  assign file_url = path | prepend: file_url_prefix
  assign file_name = path | split: '/' | last
  if file_name contains '.'
    assign file_extension = file_name | split: '.' | last
  endif
  assign css_extensions = 'css|less|sass|scss|styl|stylus|pcss|postcss' | split: '|'
  assign is_css = false
  if css_extensions contains file_extension
    assign is_css = true
  endif
%}
<script src="http://localhost:5173/@vite/client" type="module"></script>
<script id="hot-reload-client" src="https://unpkg.com/@shopify/theme-hot-reload" type="module"></script>
{% if is_css == true %}
  <link rel="stylesheet" href="{{ file_url }}" crossorigin="anonymous">
{% else %}
  <script src="{{ file_url }}" type="module"></script>
{% endif %}
"
`;

exports[`vite-plugin-shopify:html > builds out .liquid files for development with a cloudflare tunnel url 1`] = `
"{% comment %}
  IMPORTANT: This snippet is automatically generated by vite-plugin-shopify.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = vite-tag | replace: '@/', '../' %}
{% liquid
  assign path_prefix = path | slice: 0
  if path_prefix == '/'
    assign file_url_prefix = 'https://example.trycloudflare.com'
  else
    assign file_url_prefix = 'https://example.trycloudflare.com/test/__fixtures__/frontend/entrypoints/'
  endif
  assign file_url = path | prepend: file_url_prefix
  assign file_name = path | split: '/' | last
  if file_name contains '.'
    assign file_extension = file_name | split: '.' | last
  endif
  assign css_extensions = 'css|less|sass|scss|styl|stylus|pcss|postcss' | split: '|'
  assign is_css = false
  if css_extensions contains file_extension
    assign is_css = true
  endif
%}
<script src="https://example.trycloudflare.com/@vite/client" type="module"></script>
<script id="hot-reload-client" src="https://unpkg.com/@shopify/theme-hot-reload" type="module"></script>
{% if is_css == true %}
  <link rel="stylesheet" href="{{ file_url }}" crossorigin="anonymous">
{% else %}
  <script src="{{ file_url }}" type="module"></script>
{% endif %}
"
`;

exports[`vite-plugin-shopify:html > builds out .liquid files for development with an ngrok tunnel url 1`] = `
"{% comment %}
  IMPORTANT: This snippet is automatically generated by vite-plugin-shopify.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = vite-tag | replace: '@/', '../' %}
{% liquid
  assign path_prefix = path | slice: 0
  if path_prefix == '/'
    assign file_url_prefix = 'https://123abc.ngrok.io'
  else
    assign file_url_prefix = 'https://123abc.ngrok.io/test/__fixtures__/frontend/entrypoints/'
  endif
  assign file_url = path | prepend: file_url_prefix
  assign file_name = path | split: '/' | last
  if file_name contains '.'
    assign file_extension = file_name | split: '.' | last
  endif
  assign css_extensions = 'css|less|sass|scss|styl|stylus|pcss|postcss' | split: '|'
  assign is_css = false
  if css_extensions contains file_extension
    assign is_css = true
  endif
%}
<script src="https://123abc.ngrok.io/@vite/client" type="module"></script>
<script id="hot-reload-client" src="https://unpkg.com/@shopify/theme-hot-reload" type="module"></script>
{% if is_css == true %}
  <link rel="stylesheet" href="{{ file_url }}" crossorigin="anonymous">
{% else %}
  <script src="{{ file_url }}" type="module"></script>
{% endif %}
"
`;

exports[`vite-plugin-shopify:html > builds out .liquid files for development with the react refresh script 1`] = `
"{% comment %}
  IMPORTANT: This snippet is automatically generated by vite-plugin-shopify.
  Do not attempt to modify this file directly, as any changes will be overwritten by the next build.
{% endcomment %}
{% assign path = vite-tag | replace: '~/', '../' | replace: '@/', '../' | replace: '@@/', '../../resources/js/' %}
{% liquid
  assign path_prefix = path | slice: 0
  if path_prefix == '/'
    assign file_url_prefix = 'http://localhost:5173'
  else
    assign file_url_prefix = 'http://localhost:5173/test/__fixtures__/frontend/entrypoints/'
  endif
  assign file_url = path | prepend: file_url_prefix
  assign file_name = path | split: '/' | last
  if file_name contains '.'
    assign file_extension = file_name | split: '.' | last
  endif
  assign css_extensions = 'css|less|sass|scss|styl|stylus|pcss|postcss' | split: '|'
  assign is_css = false
  if css_extensions contains file_extension
    assign is_css = true
  endif
%}
<script src="http://localhost:5173/@id/__x00__vite-plugin-shopify:react-refresh" type="module"></script>
<script src="http://localhost:5173/@vite/client" type="module"></script>
<script id="hot-reload-client" src="https://unpkg.com/@shopify/theme-hot-reload" type="module"></script>
{% if is_css == true %}
  <link rel="stylesheet" href="{{ file_url }}" crossorigin="anonymous">
{% else %}
  <script src="{{ file_url }}" type="module"></script>
{% endif %}
"
`;
